--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,15 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#FFFFFF">
-  <group android:scaleX="0.4524"
-      android:scaleY="0.4524"
-      android:translateX="6.5712"
-      android:translateY="6.5712">
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <group android:scaleX="0.3828"
+      android:scaleY="0.3828"
+      android:translateX="280.944"
+      android:translateY="296.256">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M20,7h-5V4c0,-1.1 -0.9,-2 -2,-2h-2C9.9,2 9,2.9 9,4v3H4C2.9,7 2,7.9 2,9v11c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V9C22,7.9 21.1,7 20,7zM11,4h2v5h-2V4zM11,16H9v2H7v-2H5v-2h2v-2h2v2h2V16zM13,14.5V13h6v1.5H13zM13,17.5V16h4v1.5H13z"/>
+        android:pathData="m736,882 l53,-53 -178,-178 -53,53q-37,37 -37,89t37,89q37,37 89,37t89,-37ZM831,787 L884,734q37,-37 37,-89t-37,-89q-37,-37 -89,-37t-89,37l-53,53 178,178ZM280,340h400v-60L280,280v60ZM480,163q14,0 24.5,-10.5T515,128q0,-14 -10.5,-24.5T480,93q-14,0 -24.5,10.5T445,128q0,14 10.5,24.5T480,163ZM467,840L180,840q-25,0 -42.5,-17.5T120,780v-600q0,-25 17.5,-42.5T180,120h205q5,-35 32,-57.5t63,-22.5q36,0 63,22.5t32,57.5h205q25,0 42.5,17.5T840,180v284q-42,-11 -84,-1t-76,36v-49L280,450v60h387L557,620L280,620v60h219q-26,34 -34.5,76t2.5,84Z"
+        android:fillColor="#FFFFFF"/>
   </group>
 </vector>
